// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ffiBindingOfDescriptions builds bindings for AU3_AutoItSetOption 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ClipGet 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ClipPut 1`] = `
Array [
  "void",
  Array [
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlClick 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlClickByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
    "uint16*",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlCommand 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlCommandByHandle 1`] = `
Array [
  "void",
  Array [
    "void*",
    "void*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlDisable 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlDisableByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlEnable 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlEnableByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlFocus 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlFocusByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlGetFocus 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlGetFocusByHandle 1`] = `
Array [
  "void",
  Array [
    "void*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlGetHandle 1`] = `
Array [
  "void*",
  Array [
    "void*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlGetText 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlGetTextByHandle 1`] = `
Array [
  "void",
  Array [
    "void*",
    "void*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlHide 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlHideByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlListView 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlListViewByHandle 1`] = `
Array [
  "void",
  Array [
    "void*",
    "void*",
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlMove 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlMoveByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
    "int",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlSend 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlSendByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlSetText 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlSetTextByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlShow 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_ControlShowByHandle 1`] = `
Array [
  "int",
  Array [
    "void*",
    "void*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_Init 1`] = `
Array [
  "void",
  Array [],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_IsAdmin 1`] = `
Array [
  "int",
  Array [],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_MouseClick 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "int",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_MouseClickDrag 1`] = `
Array [
  "int",
  Array [
    "uint16*",
    "int",
    "int",
    "int",
    "int",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_MouseDown 1`] = `
Array [
  "void",
  Array [
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_MouseGetCursor 1`] = `
Array [
  "int",
  Array [],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_WinGetHandle 1`] = `
Array [
  "void*",
  Array [
    "uint16*",
    "uint16*",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_WinGetTitle 1`] = `
Array [
  "void",
  Array [
    "uint16*",
    "uint16*",
    "uint16*",
    "int",
  ],
]
`;

exports[`ffiBindingOfDescriptions builds bindings for AU3_error 1`] = `
Array [
  "int",
  Array [],
]
`;

exports[`ffiBindingSourceOfDescriptions builds a source file for bindings 1`] = `
"export const bindings : Record<string, [string, string[]]> = {
  \\"AU3_Init\\": [
    \\"void\\",
    []
  ],
  \\"AU3_error\\": [
    \\"int\\",
    []
  ],
  \\"AU3_AutoItSetOption\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ClipGet\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ClipPut\\": [
    \\"void\\",
    [
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlClick\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlClickByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlCommand\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlCommandByHandle\\": [
    \\"void\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlListView\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlListViewByHandle\\": [
    \\"void\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlDisable\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlDisableByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\"
    ]
  ],
  \\"AU3_ControlEnable\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlEnableByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\"
    ]
  ],
  \\"AU3_ControlFocus\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlFocusByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\"
    ]
  ],
  \\"AU3_ControlGetFocus\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlGetFocusByHandle\\": [
    \\"void\\",
    [
      \\"void*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlGetHandle\\": [
    \\"void*\\",
    [
      \\"void*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlGetText\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlGetTextByHandle\\": [
    \\"void\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlHide\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlHideByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\"
    ]
  ],
  \\"AU3_ControlMove\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlMoveByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlSend\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlSendByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ],
  \\"AU3_ControlSetText\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlSetTextByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlShow\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_ControlShowByHandle\\": [
    \\"int\\",
    [
      \\"void*\\",
      \\"void*\\"
    ]
  ],
  \\"AU3_IsAdmin\\": [
    \\"int\\",
    []
  ],
  \\"AU3_MouseClick\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_MouseClickDrag\\": [
    \\"int\\",
    [
      \\"uint16*\\",
      \\"int\\",
      \\"int\\",
      \\"int\\",
      \\"int\\",
      \\"int\\"
    ]
  ],
  \\"AU3_MouseDown\\": [
    \\"void\\",
    [
      \\"uint16*\\"
    ]
  ],
  \\"AU3_MouseGetCursor\\": [
    \\"int\\",
    []
  ],
  \\"AU3_WinGetHandle\\": [
    \\"void*\\",
    [
      \\"uint16*\\",
      \\"uint16*\\"
    ]
  ],
  \\"AU3_WinGetTitle\\": [
    \\"void\\",
    [
      \\"uint16*\\",
      \\"uint16*\\",
      \\"uint16*\\",
      \\"int\\"
    ]
  ]
}"
`;
